--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.39.3",
-    "expo": "~52.0.35",
+    "expo": "~52.0.36",                
     "expo-blur": "^14.0.3",
     "expo-clipboard": "~7.0.1",
-    "expo-constants": "~17.0.6",
-    "expo-font": "^13.0.3",
+    "expo-constants": "~17.0.7",    
+    "expo-font": "~13.0.4",          
     "expo-haptics": "^14.0.1",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
     "expo-router": "4.0.17",
-    "expo-secure-store": "~12.8.1",
+    "expo-secure-store": "~14.0.1",     
     "expo-splash-screen": "~0.29.22",
     "expo-sqlite": "~15.1.2",
     "expo-status-bar": "^2.0.1",
@@ -46,7 +46,7 @@
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
     "react-native-pager-view": "6.5.1",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "15.8.0",     
     "svg-path-properties": "^1.0.0",
     "react-native-modal-datetime-picker": "^18.0.0"
   },
