--- a/ios/StravaClone.xcodeproj/xcshareddata/xcschemes/StravaClone.xcscheme
+++ b/ios/StravaClone.xcodeproj/xcshareddata/xcschemes/StravaClone.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "StravaClone.app"
-               BlueprintName = "StravaClone"
-               ReferencedContainer = "container:StravaClone.xcodeproj">
+               BuildableName = "CTP.app"
+               BlueprintName = "CTP"
+               ReferencedContainer = "container:CTP.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "StravaCloneTests.xctest"
-               BlueprintName = "StravaCloneTests"
-               ReferencedContainer = "container:StravaClone.xcodeproj">
+               BuildableName = "CTPTests.xctest"
+               BlueprintName = "CTPTests"
+               ReferencedContainer = "container:CTP.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "StravaClone.app"
-            BlueprintName = "StravaClone"
-            ReferencedContainer = "container:StravaClone.xcodeproj">
+            BuildableName = "CTP.app"
+            BlueprintName = "CTP"
+            ReferencedContainer = "container:CTP.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "StravaClone.app"
-            BlueprintName = "StravaClone"
-            ReferencedContainer = "container:StravaClone.xcodeproj">
+            BuildableName = "CTP.app"
+            BlueprintName = "CTP"
+            ReferencedContainer = "container:CTP.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
