--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "bolt-expo-starter",
-  "main": "expo-router/entry",
   "version": "1.0.0",
   "private": true,
+  "main": "expo-router/entry",
   "scripts": {
     "dev": "EXPO_NO_TELEMETRY=1 expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "prebuild": "npx expo prebuild --clean",
+    "ios": "npx expo run:ios",
+    "android": "npx expo run:android",
+    "start": "expo start",
     "web": "expo start --web",
     "build:web": "expo export --platform web",
     "lint": "expo lint"
@@ -17,16 +19,17 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@supabase/supabase-js": "^2.39.3",
-    "expo": "~52.0.36",                
-
+    "expo": "~52.0.36",
     "expo-clipboard": "~7.0.1",
-    "expo-constants": "~17.0.7",    
-    "expo-font": "~13.0.4",          
+    "expo-constants": "~17.0.7",
+    "expo-dev-client": "^2.1.0",
+    "expo-build-properties": "^0.6.0",
+    "expo-font": "~13.0.4",
     "expo-haptics": "^14.0.1",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
     "expo-router": "4.0.17",
-    "expo-secure-store": "~14.0.1",     
+    "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-sqlite": "~15.1.2",
     "expo-status-bar": "^2.0.1",
@@ -36,6 +39,8 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-health": "^1.2.0",
+    "react-native-health-connect": "^1.0.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
@@ -43,16 +48,14 @@
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
     "react-native-pager-view": "6.5.1",
-    "react-native-svg": "15.8.0",     
+    "react-native-svg": "15.8.0",
     "expo-blur": "^14.0.3",
     "expo-web-browser": "^14.0.2",
     "svg-path-properties": "^1.0.0",
     "@lucide/lab": "^0.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
-
     "@react-navigation/native": "^7.0.14",
     "react-native-modal-datetime-picker": "^18.0.0",
-
     "lucide-react-native": "^0.475.0",
     "@react-native-picker/picker": "^2.4.8",
     "zustand": "^4.5.2"
