--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "expo": "~52.0.36",
     "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.7",
-    "expo-dev-client": "^2.1.0",
+    "expo-dev-client": "~5.0.14",
     "expo-build-properties": "^0.6.0",
     "expo-font": "~13.0.4",
     "expo-haptics": "^14.0.1",
