--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -56,3 +56,6 @@ EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 expo.useLegacyPackaging=false
 
 android.minSdkVersion=26
+android.compileSdkVersion=33
+android.targetSdkVersion=33
+android.buildToolsVersion=33.0.0
