--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
   "dependencies": {
     "@expo/metro-config": "~0.19.0",
     "@expo/vector-icons": "^14.0.0",
+    "@lucide/lab": "^0.1.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-picker/picker": "^2.4.8",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.39.3",
     "expo": "~52.0.36",
+    "expo-blur": "^14.0.3",
+    "expo-build-properties": "^0.6.0",
     "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.7",
     "expo-dev-client": "~5.0.14",
-    "expo-build-properties": "^0.6.0",
     "expo-font": "~13.0.4",
     "expo-haptics": "^14.0.1",
     "expo-linear-gradient": "^14.0.2",
@@ -35,35 +40,30 @@
     "expo-status-bar": "^2.0.1",
     "expo-symbols": "^0.2.2",
     "expo-system-ui": "^4.0.7",
+    "expo-web-browser": "^14.0.2",
+    "lucide-react-native": "^0.475.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-health": "^1.2.0",
     "react-native-health-connect": "^1.0.0",
+    "react-native-modal-datetime-picker": "^18.0.0",
+    "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-svg": "15.8.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
-    "react-native-pager-view": "6.5.1",
-    "react-native-svg": "15.8.0",
-    "expo-blur": "^14.0.3",
-    "expo-web-browser": "^14.0.2",
     "svg-path-properties": "^1.0.0",
-    "@lucide/lab": "^0.1.2",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "react-native-modal-datetime-picker": "^18.0.0",
-    "lucide-react-native": "^0.475.0",
-    "@react-native-picker/picker": "^2.4.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
-    "typescript": "^5.3.3",
-    "react-native-svg-transformer": "^1.0.0"
+    "react-native-svg-transformer": "^1.0.0",
+    "typescript": "^5.3.3"
   }
 }
