new logo and fixes

--- a/ios/CTP/Info.plist
+++ b/ios/CTP/Info.plist
@@ -28,7 +28,7 @@
         <key>CFBundleURLSchemes</key>
         <array>
           <string>myapp</string>
-          <string>com.yourcompany.ctp</string>
+          <string>com.dheshadev.ctp</string>
         </array>
       </dict>
       <dict>
