--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
         <data android:scheme="myapp"/>
-        <data android:scheme="com.yourcompany.ctp"/>
+        <data android:scheme="com.dheshadev.ctp"/>
         <data android:scheme="exp+ctp"/>
       </intent-filter>
     </activity>
