--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -59,3 +59,4 @@ android.minSdkVersion=26
 android.compileSdkVersion=33
 android.targetSdkVersion=33
 android.buildToolsVersion=33.0.0
+android.extraMavenRepos=[]
