--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "expo-symbols": "^0.2.2",
     "expo-system-ui": "^4.0.7",
     "expo-web-browser": "^14.0.2",
+    "expo-notifications": "~0.28.3",
+    "expo-device": "~5.9.3",
     "lucide-react-native": "^0.475.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-health": "^1.2.0",
-    "react-native-health-connect": "^1.0.0",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
