--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.7",
     "expo-dev-client": "~5.0.14",
+    "expo-device": "~5.9.3",
     "expo-font": "~13.0.4",
     "expo-haptics": "^14.0.1",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
+    "expo-notifications": "~0.28.3",
     "expo-router": "~4.0.19",
     "expo-secure-store": "~14.0.1",
     "expo-splash-screen": "~0.29.22",
@@ -41,8 +43,6 @@
     "expo-symbols": "^0.2.2",
     "expo-system-ui": "^4.0.7",
     "expo-web-browser": "^14.0.2",
-    "expo-notifications": "~0.28.3",
-    "expo-device": "~5.9.3",
     "lucide-react-native": "^0.475.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -57,6 +57,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.19.13",
     "react-native-webview": "13.12.5",
+    "supabase": "^2.19.7",
     "svg-path-properties": "^1.0.0",
     "zustand": "^4.5.2"
   },
