--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@lucide/lab": "^0.1.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.39.3",
     "expo": "~52.0.36",
     "expo-blur": "^14.0.3",
-    "expo-build-properties": "~0.13.2",
+    "expo-build-properties": "^0.13.2",
     "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.7",
     "expo-dev-client": "~5.0.14",
@@ -48,6 +49,8 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-health": "^1.19.0",
+    "react-native-health-connect": "^3.3.2",
     "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-pager-view": "6.5.1",
     "react-native-reanimated": "~3.16.1",
