updated ui and fitness options and health app fixed d

--- a/app.json
+++ b/app.json
@@ -19,6 +19,10 @@
         "UIBackgroundModes": ["remote-notification"],
         "NSHealthShareUsageDescription": "CTP needs access to your health data to track your activities like steps, distance, and workouts. This data is used to monitor your progress in challenges and help you achieve your fitness goals. Your data is stored securely and is only used within the app.",
         "NSHealthUpdateUsageDescription": "CTP needs permission to update your health data to accurately track your activities and ensure your challenge progress is up to date. This allows us to sync your fitness achievements and provide accurate statistics. Your data privacy and security are our top priority."
+      },
+      "entitlements": {
+        "com.apple.developer.healthkit": true,
+        "com.apple.developer.healthkit.access": []
       }
     },
     "android": {
@@ -54,12 +58,23 @@
       [
         "expo-build-properties",
         {
+          "ios": {
+            "useFrameworks": "static"
+          },
           "android": {
             "minSdkVersion": 26,
             "compileSdkVersion": 33,
             "targetSdkVersion": 33,
             "buildToolsVersion": "33.0.0"
           }
+        }
+      ],
+      [
+        "react-native-health",
+        {
+          "isClinicalDataEnabled": false,
+          "healthSharePermission": "CTP needs access to your health data to track your activities like steps, distance, and workouts.",
+          "healthUpdatePermission": "CTP needs permission to update your health data to accurately track your activities."
         }
       ],
       "expo-notifications",
