--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "@supabase/supabase-js": "^2.39.3",
     "expo": "~52.0.36",
     "expo-blur": "^14.0.3",
-    "expo-build-properties": "^0.13.2",
+    "expo-build-properties": "~0.13.2",
     "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.7",
-    "expo-dev-client": "~5.0.14",
+    "expo-dev-client": "~5.0.15",
     "expo-device": "~5.9.3",
     "expo-font": "~13.0.4",
     "expo-haptics": "^14.0.1",
