--- a/app.json
+++ b/app.json
@@ -18,7 +18,13 @@
       "infoPlist": {
         "UIBackgroundModes": ["remote-notification"],
         "NSHealthShareUsageDescription": "This app requires access to your health data to track your fitness activities and provide personalized insights.",
-        "NSHealthUpdateUsageDescription": "This app requires access to your health data to track your fitness activities and provide personalized insights."
+        "NSHealthUpdateUsageDescription": "This app requires access to your health data to track your fitness activities and provide personalized insights.",
+        "GADApplicationIdentifier": "ca-app-pub-6833157133488263~3762282463",
+        "SKAdNetworkItems": [
+          {
+            "SKAdNetworkIdentifier": "cstr6suwn9.skadnetwork"
+          }
+        ]
       },
       "entitlements": {
         "com.apple.developer.healthkit": true,
@@ -42,7 +48,10 @@
         "android.permission.health.READ_SLEEP",
         "android.permission.health.READ_FLOORS_CLIMBED",
         "android.permission.health.READ_ACTIVE_CALORIES_BURNED"
-      ]
+      ],
+      "config": {
+        "googleMobileAdsAppId": "ca-app-pub-6833157133488263~9820424352"
+      }
     },
     "web": {
       "bundler": "metro",
