--- a/app.json
+++ b/app.json
@@ -12,6 +12,10 @@
       "resizeMode": "contain",
       "backgroundColor": "#000000"
     },
+    "updates": {
+      "fallbackToCacheTimeout": 0
+    },
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.dheshadev.ctp",
@@ -56,11 +60,6 @@
       "bundler": "metro",
       "favicon": "./assets/images/icon.png"
     },
-    "extra": {
-      "eas": {
-        "projectId": "ace5179f-9d07-4a93-86cb-af3735bf01ef"
-      }
-    },
     "plugins": [
       "expo-router",
       [
@@ -90,8 +89,8 @@
       [
         "react-native-google-mobile-ads",
         {
-          "android": "ca-app-pub-6833157133488263~9820424352",
-          "ios": "ca-app-pub-6833157133488263~3762282463",
+          "android_app_id": "ca-app-pub-6833157133488263~9820424352",
+          "ios_app_id": "ca-app-pub-6833157133488263~3762282463",
           "user_tracking_description": "This identifier will be used to deliver personalized ads to you.",
           "delay_app_measurement_init": true,
           "sk_ad_network_items": [
@@ -99,6 +98,19 @@
           ]
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "ace5179f-9d07-4a93-86cb-af3735bf01ef"
+      },
+      "react-native-google-mobile-ads": {
+        "android_app_id": "ca-app-pub-6833157133488263~9820424352",
+        "ios_app_id": "ca-app-pub-6833157133488263~3762282463"
+      }
+    }
+  },
+  "react-native-google-mobile-ads": {
+    "android_app_id": "ca-app-pub-6833157133488263~9820424352",
+    "ios_app_id": "ca-app-pub-6833157133488263~3762282463"
   }
 }
