Add ios_app_id for Google Mobile Ads5

--- a/app.json
+++ b/app.json
@@ -89,8 +89,8 @@
       [
         "react-native-google-mobile-ads",
         {
-          "android_app_id": "ca-app-pub-6833157133488263~9820424352",
-          "ios_app_id": "ca-app-pub-6833157133488263~3762282463",
+          "androidAppId": "ca-app-pub-6833157133488263~9820424352",
+          "iosAppId": "ca-app-pub-6833157133488263~3762282463",
           "user_tracking_description": "This identifier will be used to deliver personalized ads to you.",
           "delay_app_measurement_init": true,
           "sk_ad_network_items": [
@@ -104,13 +104,13 @@
         "projectId": "ace5179f-9d07-4a93-86cb-af3735bf01ef"
       },
       "react-native-google-mobile-ads": {
-        "android_app_id": "ca-app-pub-6833157133488263~9820424352",
-        "ios_app_id": "ca-app-pub-6833157133488263~3762282463"
+        "androidAppId": "ca-app-pub-6833157133488263~9820424352",
+        "iosAppId": "ca-app-pub-6833157133488263~3762282463"
       }
     }
   },
   "react-native-google-mobile-ads": {
-    "android_app_id": "ca-app-pub-6833157133488263~9820424352",
-    "ios_app_id": "ca-app-pub-6833157133488263~3762282463"
+    "androidAppId": "ca-app-pub-6833157133488263~9820424352",
+    "iosAppId": "ca-app-pub-6833157133488263~3762282463"
   }
 }
