Add ios_app_id for Google Mobile Ads final

--- a/ios/CTP/Info.plist
+++ b/ios/CTP/Info.plist
@@ -40,6 +40,8 @@
     </array>
     <key>CFBundleVersion</key>
     <string>1</string>
+    <key>GADApplicationIdentifier</key>
+    <string>ca-app-pub-6833157133488263~3762282463</string>
     <key>GADDelayAppMeasurementInit</key>
     <false/>
     <key>LSMinimumSystemVersion</key>
