--- a/app.json
+++ b/app.json
@@ -19,11 +19,12 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.dheshadev.ctp",
+      "buildNumber": "1",
       "infoPlist": {
         "UIBackgroundModes": ["remote-notification"],
         "NSHealthShareUsageDescription": "This app requires access to your health data to track your fitness activities and provide personalized insights.",
         "NSHealthUpdateUsageDescription": "This app requires access to your health data to track your fitness activities and provide personalized insights.",
-        "GADApplicationIdentifier": "ca-app-pub-6833157133488263~3762282463",
+        "GADApplicationIdentifier": "ca-app-pub-6833157133488263~6430444881",
         "SKAdNetworkItems": [
           {
             "SKAdNetworkIdentifier": "cstr6suwn9.skadnetwork"
@@ -42,6 +43,7 @@
         "backgroundColor": "#000000"
       },
       "package": "com.dheshadev.ctp",
+      "versionCode": 1,
       "permissions": [
         "android.permission.RECEIVE_BOOT_COMPLETED",
         "android.permission.VIBRATE",
@@ -89,13 +91,12 @@
       [
         "react-native-google-mobile-ads",
         {
-          "androidAppId": "ca-app-pub-6833157133488263~9820424352",
-          "iosAppId": "ca-app-pub-6833157133488263~3762282463",
-          "user_tracking_description": "This identifier will be used to deliver personalized ads to you.",
-          "delay_app_measurement_init": true,
-          "sk_ad_network_items": [
-            "cstr6suwn9.skadnetwork"
-          ]
+          "android": {
+            "appId": "ca-app-pub-6833157133488263~9820424352"
+          },
+          "ios": {
+            "appId": "ca-app-pub-6833157133488263~6430444881"
+          }
         }
       ]
     ],
@@ -105,12 +106,12 @@
       },
       "react-native-google-mobile-ads": {
         "androidAppId": "ca-app-pub-6833157133488263~9820424352",
-        "iosAppId": "ca-app-pub-6833157133488263~3762282463"
+        "iosAppId": "ca-app-pub-6833157133488263~6430444881"
       }
     }
   },
   "react-native-google-mobile-ads": {
     "androidAppId": "ca-app-pub-6833157133488263~9820424352",
-    "iosAppId": "ca-app-pub-6833157133488263~3762282463"
+    "iosAppId": "ca-app-pub-6833157133488263~6430444881"
   }
 }
