--- a/app.json
+++ b/app.json
@@ -19,12 +19,11 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.dheshadev.ctp",
-      "buildNumber": "1",
       "infoPlist": {
         "UIBackgroundModes": ["remote-notification"],
         "NSHealthShareUsageDescription": "This app requires access to your health data to track your fitness activities and provide personalized insights.",
         "NSHealthUpdateUsageDescription": "This app requires access to your health data to track your fitness activities and provide personalized insights.",
-        "GADApplicationIdentifier": "ca-app-pub-6833157133488263~6430444881",
+        "GADApplicationIdentifier": "ca-app-pub-6833157133488263~3762282463",
         "SKAdNetworkItems": [
           {
             "SKAdNetworkIdentifier": "cstr6suwn9.skadnetwork"
@@ -43,7 +42,6 @@
         "backgroundColor": "#000000"
       },
       "package": "com.dheshadev.ctp",
-      "versionCode": 1,
       "permissions": [
         "android.permission.RECEIVE_BOOT_COMPLETED",
         "android.permission.VIBRATE",
@@ -91,12 +89,13 @@
       [
         "react-native-google-mobile-ads",
         {
-          "android": {
-            "appId": "ca-app-pub-6833157133488263~9820424352"
-          },
-          "ios": {
-            "appId": "ca-app-pub-6833157133488263~6430444881"
-          }
+          "androidAppId": "ca-app-pub-6833157133488263~9820424352",
+          "iosAppId": "ca-app-pub-6833157133488263~3762282463",
+          "user_tracking_description": "This identifier will be used to deliver personalized ads to you.",
+          "delay_app_measurement_init": true,
+          "sk_ad_network_items": [
+            "cstr6suwn9.skadnetwork"
+          ]
         }
       ]
     ],
@@ -106,12 +105,12 @@
       },
       "react-native-google-mobile-ads": {
         "androidAppId": "ca-app-pub-6833157133488263~9820424352",
-        "iosAppId": "ca-app-pub-6833157133488263~6430444881"
+        "iosAppId": "ca-app-pub-6833157133488263~3762282463"
       }
     }
   },
   "react-native-google-mobile-ads": {
     "androidAppId": "ca-app-pub-6833157133488263~9820424352",
-    "iosAppId": "ca-app-pub-6833157133488263~6430444881"
+    "iosAppId": "ca-app-pub-6833157133488263~3762282463"
   }
 }
