udpates for  Google Mobile Ads final

--- a/ios/CTP/Info.plist
+++ b/ios/CTP/Info.plist
@@ -40,6 +40,8 @@
     </array>
     <key>CFBundleVersion</key>
     <string>1</string>
+    <key>GADApplicationIdentifier</key>
+    <string>ca-app-pub-6833157133488263~3762282463</string>
     <key>GADDelayAppMeasurementInit</key>
     <false/>
     <key>LSMinimumSystemVersion</key>
@@ -54,19 +56,12 @@
       <true/>
     </dict>
     <key>NSHealthShareUsageDescription</key>
-    <string>This app requires access to your health data to track your fitness activities and provide personalized insights.</string>
+    <string>CTP needs access to your health data to track your activities like steps, distance, and workouts. This data is used to monitor your progress in challenges and help you achieve your fitness goals. Your data is stored securely and is only used within the app.</string>
     <key>NSHealthUpdateUsageDescription</key>
-    <string>This app requires access to your health data to track your fitness activities and provide personalized insights.</string>
+    <string>CTP needs permission to update your health data to accurately track your activities and ensure your challenge progress is up to date. This allows us to sync your fitness achievements and provide accurate statistics. Your data privacy and security are our top priority.</string>
     <key>NSUserActivityTypes</key>
     <array>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
-    </array>
-    <key>SKAdNetworkItems</key>
-    <array>
-      <dict>
-        <key>SKAdNetworkIdentifier</key>
-        <string>cstr6suwn9.skadnetwork</string>
-      </dict>
     </array>
     <key>UIBackgroundModes</key>
     <array>
