--- a/ios/CTP/Info.plist
+++ b/ios/CTP/Info.plist
@@ -91,6 +91,8 @@
     </array>
     <key>UIUserInterfaceStyle</key>
     <string>Light</string>
+    <key>NSUserTrackingUsageDescription</key>
+    <string>This app uses your identifier to deliver personalized ads and improve your experience.</string>
     <key>UIViewControllerBasedStatusBarAppearance</key>
     <false/>
   </dict>
