--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/metro-config": "~0.19.0",
     "@expo/vector-icons": "^14.0.0",
     "@lucide/lab": "^0.1.2",
+    "@react-native-async-storage/async-storage": "^1.x.x",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/netinfo": "^11.4.1",
