--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "@expo/metro-config": "~0.19.0",
     "@expo/vector-icons": "^14.0.0",
     "@lucide/lab": "^0.1.2",
-    "@react-native-async-storage/async-storage": "^1.x.x",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/netinfo": "^11.4.1",
@@ -67,6 +66,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@expo/config-plugins": "^9.0.17",
     "@types/react": "~18.3.12",
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "^5.3.3"
